2010-03-12
Fixed encode.php plugin, time offset (%TO) wasn't being replaced since new API changed
Added lots more actions to ampache.php plugin
	Now supports albums, songs, search_songs, etc.
Converted search.php plugin over to use new API

2010-03-05
Working on install.php
Fine tuning API
Added a method of creating validate_<> functions and setting them as GLOBAL variables
	This is useful when the search.php plugin is implemented since there is no define set of fields
Fixed recognition of 'true' values from request variables
	is_bool doesn't work if a string 'true' or 'false' is passed in

2010-03-04
Replaced some uses of $smarty.request and $smarty.get and $smarty.session
Fixed $smarty.session.selected to use $selected and the way the select.php plugin uses it
Added detection for Snoopy, EXT, bttracker JS to install.php plugin

2010-03-02
Deleted repository copy of extjs
Went through $smarty.request usages and fixed them since all global variables are removed
Changed the API for generate_href
	Now only a request string or path_info is accepted as input
	Optional "notspecial" does not invoke the htmlspecialchars() procedure on the link, also "include_domain" which adds the HTML_DOMAIN

2010-03-01
Fixed Ampache.php plugin
Made request.php pluin obsolete
	Now handled in core.php under validate_plugin() which will check for other clues as to what they are trying to access if the plugin variable isn't set
Common.php setupInputVars() also calls the rewrite_vars() function, which will move around variables for compatibility before the request is processed
	This is also based on which plugin is selected
Permissions for ampache were already in effect since it uses the database.php wrapper that adds to the $where query

2010-02-28
Fixed error outputting in some plugins
Fixed validate_dir() and validate_file()
Created different $GLOBALS for holding user and debug errors so functions can abort if there are errors